--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -3,7 +3,8 @@
     "builds": [
       {
         "src": "index.html",
-        "use": "@vercel/static"
+        "use": "@vercel/static-build",
+        "config": { "distDir": "dist" }
       }
     ],
     "routes": [
